# pygobject-docs

./: .codespell.txt  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  libraries.txt  org.gnome.PyGObjectDocs.json  pygobject-docs.doap  pyproject.toml
pygobject_docs/: category.py  conf.py  doc.py  generate.py  gir.py  inspect.py  members.py  overrides.py
pygobject_docs/sphinx/: globaltoc.html  searchbox.html  versions.html
pygobject_docs/static/: custom.css
pygobject_docs/templates/: class-detail.j2  classes.j2  constants.j2  functions.j2  index.j2  top-index.j2
source/: conf.py  index.rst
tests/: test_category.py  test_doc.py  test_generate.py  test_gir.py  test_inspect.py  test_members.py
